[gd_scene load_steps=26 format=3 uid="uid://b0ocfgbpqjf8v"]

[ext_resource type="Script" uid="uid://c3e0aodvak0be" path="res://scripts/save_menu.gd" id="1_glv2v"]
[ext_resource type="Texture2D" uid="uid://b1ojnkq3qjtmh" path="res://art/images/inicio.png" id="1_ouh38"]
[ext_resource type="FontFile" uid="uid://b04amb0g5fgkg" path="res://art/Not Jam Chunky Sans 6/NotJamChunkySans.ttf" id="2_asrt0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fro71"]
bg_color = Color(0.894118, 0.643137, 0.454902, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.45098, 0.235294, 0.231373, 1)
border_blend = true
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ouh38"]
bg_color = Color(0.894118, 0.643137, 0.454902, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.45098, 0.235294, 0.231373, 1)
border_blend = true
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2xqym"]
bg_color = Color(0.588235, 0.517647, 0.439216, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.45098, 0.235294, 0.231373, 1)
border_blend = true
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dsnsb"]
bg_color = Color(0.894118, 0.643137, 0.454902, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.45098, 0.235294, 0.231373, 1)
border_blend = true
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_asrt0"]
bg_color = Color(0.588235, 0.517647, 0.439216, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.45098, 0.235294, 0.231373, 1)
border_blend = true
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_woxok"]
bg_color = Color(0.894118, 0.643137, 0.454902, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.45098, 0.235294, 0.231373, 1)
border_blend = true
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qi7ii"]
bg_color = Color(0.894118, 0.643137, 0.454902, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.45098, 0.235294, 0.231373, 1)
border_blend = true
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m1kuw"]
bg_color = Color(0.894118, 0.643137, 0.454902, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.45098, 0.235294, 0.231373, 1)
border_blend = true
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sj640"]
bg_color = Color(0.588235, 0.517647, 0.439216, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.45098, 0.235294, 0.231373, 1)
border_blend = true
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0aupr"]
bg_color = Color(0.894118, 0.643137, 0.454902, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.45098, 0.235294, 0.231373, 1)
border_blend = true
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nnj2o"]
bg_color = Color(0.588235, 0.517647, 0.439216, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.45098, 0.235294, 0.231373, 1)
border_blend = true
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0cseo"]
bg_color = Color(0.588235, 0.517647, 0.439216, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.45098, 0.235294, 0.231373, 1)
border_blend = true
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y2cc8"]
bg_color = Color(0.894118, 0.643137, 0.454902, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.45098, 0.235294, 0.231373, 1)
border_blend = true
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_24ngm"]
bg_color = Color(0.588235, 0.517647, 0.439216, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.45098, 0.235294, 0.231373, 1)
border_blend = true
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_htpta"]
bg_color = Color(0.588235, 0.517647, 0.439216, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.45098, 0.235294, 0.231373, 1)
border_blend = true
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_idnoy"]
bg_color = Color(0.894118, 0.643137, 0.454902, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.45098, 0.235294, 0.231373, 1)
border_blend = true
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_78pur"]
bg_color = Color(0.588235, 0.517647, 0.439216, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.45098, 0.235294, 0.231373, 1)
border_blend = true
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sxt1q"]
bg_color = Color(0.588235, 0.517647, 0.439216, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.45098, 0.235294, 0.231373, 1)
border_blend = true
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i8r4w"]
bg_color = Color(0.894118, 0.643137, 0.454902, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.45098, 0.235294, 0.231373, 1)
border_blend = true
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1bd7a"]
bg_color = Color(0.588235, 0.517647, 0.439216, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.45098, 0.235294, 0.231373, 1)
border_blend = true
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0o473"]
bg_color = Color(0.588235, 0.517647, 0.439216, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.45098, 0.235294, 0.231373, 1)
border_blend = true
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mgftn"]
bg_color = Color(0.894118, 0.643137, 0.454902, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.45098, 0.235294, 0.231373, 1)
border_blend = true
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 6
texture = ExtResource("1_ouh38")
expand_mode = 1

[node name="Save" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_glv2v")

[node name="ColorRect" type="ColorRect" parent="Save"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="NewUsernamePanel" type="Panel" parent="Save"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -557.0
offset_top = -248.0
offset_right = -156.0
offset_bottom = -147.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.80688, 4.75463)
theme_override_styles/panel = SubResource("StyleBoxFlat_fro71")

[node name="VBoxContainer" type="VBoxContainer" parent="Save/NewUsernamePanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 11.0
offset_right = 387.0
offset_bottom = 97.0

[node name="TextLabel" type="Label" parent="Save/NewUsernamePanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_asrt0")
theme_override_font_sizes/font_size = 13
text = "Escribe el nombre del personaje:"

[node name="UsernameInput" type="LineEdit" parent="Save/NewUsernamePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_asrt0")

[node name="ConfirmButton" type="Button" parent="Save/NewUsernamePanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_asrt0")
text = "Aceptar"

[node name="InfoLabel" type="Label" parent="Save"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="CenterContainer" type="CenterContainer" parent="Save"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -402.0
offset_top = -199.0
offset_right = -222.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.66709, 2.94564)

[node name="VBoxContainer" type="VBoxContainer" parent="Save/CenterContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Save/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Info1" type="Button" parent="Save/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_asrt0")
theme_override_styles/hover = SubResource("StyleBoxFlat_ouh38")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2xqym")
theme_override_styles/normal = SubResource("StyleBoxFlat_dsnsb")
text = "Ranura 1"

[node name="Delete1" type="Button" parent="Save/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_asrt0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_woxok")
theme_override_styles/normal = SubResource("StyleBoxFlat_qi7ii")
text = "🗑"

[node name="HBoxContainer2" type="HBoxContainer" parent="Save/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Info2" type="Button" parent="Save/CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_asrt0")
theme_override_styles/hover = SubResource("StyleBoxFlat_m1kuw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_sj640")
theme_override_styles/normal = SubResource("StyleBoxFlat_0aupr")
text = "Ranura 2"

[node name="Delete2" type="Button" parent="Save/CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_nnj2o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0cseo")
theme_override_styles/normal = SubResource("StyleBoxFlat_y2cc8")
text = "🗑"

[node name="HBoxContainer3" type="HBoxContainer" parent="Save/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Info3" type="Button" parent="Save/CenterContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_asrt0")
theme_override_styles/hover = SubResource("StyleBoxFlat_24ngm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_htpta")
theme_override_styles/normal = SubResource("StyleBoxFlat_idnoy")
text = "Ranura 3"

[node name="Delete3" type="Button" parent="Save/CenterContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_78pur")
theme_override_styles/pressed = SubResource("StyleBoxFlat_sxt1q")
theme_override_styles/normal = SubResource("StyleBoxFlat_i8r4w")
text = "🗑"

[node name="back" type="Button" parent="Save/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_asrt0")
theme_override_styles/hover = SubResource("StyleBoxFlat_1bd7a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0o473")
theme_override_styles/normal = SubResource("StyleBoxFlat_mgftn")
text = "Back"

[connection signal="pressed" from="Save/CenterContainer/VBoxContainer/HBoxContainer/Info1" to="Save" method="_on_info_1_pressed"]
[connection signal="pressed" from="Save/CenterContainer/VBoxContainer/HBoxContainer2/Info2" to="Save" method="_on_info_2_pressed"]
[connection signal="pressed" from="Save/CenterContainer/VBoxContainer/HBoxContainer3/Info3" to="Save" method="_on_info_3_pressed"]
[connection signal="pressed" from="Save/CenterContainer/VBoxContainer/back" to="Save" method="_on_back_pressed"]
